--- a/system/themes/default/public/css/scss/style.scss
+++ b/system/themes/default/public/css/scss/style.scss
@@ -1,4 +1,5 @@
 body
 {
-	background:red;
+	@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+	font-family:'Montserrat';
 }
